[package]
name = "todos"
version = "0.0.1"
edition = "2021"
authors = ["João Victor <joaovicdsantos@gmail.com>"]
description = "Your definitive cli todo list manager"
repository = "https://github.com/joaovicdsantos/todos"

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
strum = {version = "0.26.2", features = ["derive"]}
